# Tattoo-Pal

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  Dockerfile  Dockerfile.server  LICENSE  PLAN.md  PROMPTS.md  README.md  RECONCILIATION.md  RESEARCH.md  RETROACTIVE_PRD.md  REVIEW.md  docker-compose.yml  phase3_run-loop.sh  pyproject.toml  run-loop.sh  run-server.sh
.github/workflows/: ci.yml
build_artifacts/Phase 1/: 2026-06-14-loop-mcp-test-eg.txt
build_artifacts/Phase 2/: Phase2_PLAN.md  Phase2_PROMPTS.md  Phase2_RESEARCH.md  identified_loop_one_window_2026-06-15-090115-network-endpoint&auth-build-eg.txt
build_artifacts/Phase 2/Shell loop build logs/: loop-chunk-00-20260615-122411.txt  loop-chunk-01-20260615-122726.txt  loop-chunk-02-20260615-123005.txt  loop-chunk-03-20260615-125444.txt  loop-chunk-04-20260615-130531.txt  loop-chunk-05-20260615-131201.txt
build_artifacts/Phase 2/loop_scripts/: build-loop.sh
build_artifacts/Phase 3/: CLAUDE.md
build_artifacts/Phase 3/governance_docs/: REVIEW.md  (+1 more)
scratchpads/: auth-wiring-seam.md  built-for-chatgpt.md  claude-container-setup.md  claude-in-docker-sandbox.md  git-branch-reversion.md  host-header-421.md  phase-3-motivation.md  rate-limiting.md  removing-the-global.md  the_rename.md
scripts/: run-server.sh
src/tattoo_feed/: __init__.py  config.py  errors.py  imaging.py  models.py
tests/: test_config.py  test_errors.py  test_image_rendering.py  test_imaging.py  test_models.py  test_server_auth.py  test_server_boot.py  test_server_tools.py  test_server_transport.py  test_server_widget.py  test_smoke.py
(+12 files in other folders)
