[project]
name = "tattoo-feed"
version = "0.1.0"
description = "MCP server for browsing and curating Instagram tattoo-artist posts via Business Discovery."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "Toby Huxtable" }]
dependencies = [
    "httpx==0.28.1",
    "mcp==1.27.2",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "pyjwt[crypto]==2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tattoo_feed"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/tattoo_feed"]
branch = true

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "respx==0.23.1",
    "ruff==0.15.17",
]
